fdo#66385: bad line spacing under Core Text

We should be setting mnExtLeading not mnIntLeading, at least this is
what ATSUI code was doing.

Change-Id: Ibe69da4ea60630a31593b538f55fd2cd95642bf9